@@ -326,7 +326,7 @@ static void _setSSLOptions(SslOptions_T options);
 %token ALERT NOALERT MAILFORMAT UNIXSOCKET SIGNATURE
 %token TIMEOUT RETRY RESTART CHECKSUM EVERY NOTEVERY
 %token DEFAULT HTTP HTTPS APACHESTATUS FTP SMTP SMTPS POP POPS IMAP IMAPS CLAMAV NNTP NTP3 MYSQL DNS WEBSOCKET
-%token SSH DWP LDAP2 LDAP3 RDATE RSYNC TNS PGSQL POSTFIXPOLICY SIP LMTP GPS RADIUS MEMCACHE REDIS MONGODB SIEVE SPAMASSASSIN
+%token SSH DWP LDAP2 LDAP3 RDATE RSYNC TNS PGSQL POSTFIXPOLICY SIP LMTP GPS RADIUS MEMCACHE REDIS MONGODB SIEVE SPAMASSASSIN FAIL2BAN
 %token <string> STRING PATH MAILADDR MAILFROM MAILREPLYTO MAILSUBJECT
 %token <string> MAILBODY SERVICENAME STRINGNAME
 %token <number> NUMBER PERCENT LOGLIMIT CLOSELIMIT DNSLIMIT KEEPALIVELIMIT
@@ -1481,6 +1481,9 @@ protocol        : PROTOCOL APACHESTATUS apache_stat_list {
                 | PROTOCOL DWP  {
                         portset.protocol = Protocol_get(Protocol_DWP);
                   }
+                | PROTOCOL FAIL2BAN {
+                        portset.protocol = Protocol_get(Protocol_FAIL2BAN);
+                }
                 | PROTOCOL FTP {
                         portset.protocol = Protocol_get(Protocol_FTP);
                   }
