@@ -70,7 +70,8 @@ static Protocol_T protocols[] = {
         &(struct Protocol_T){"REDIS",           check_redis},
         &(struct Protocol_T){"MONGODB",         check_mongodb},
         &(struct Protocol_T){"SIEVE",           check_sieve},
-        &(struct Protocol_T){"SPAMASSASSIN",    check_spamassassin}
+        &(struct Protocol_T){"SPAMASSASSIN",    check_spamassassin},
+        &(struct Protocol_T){"FAIL2BAN",        check_fail2ban}
 };
 
 
